@@ -1,3 +1,9 @@
+  --------------------------  HepMC-2.01.05  --------------------------
+
+2007-07-19  Lynn Garren
+
+	* HepMC/HeavyIon.h: make it nice for rootcint
+
   --------------------------  HepMC-2.01.04  --------------------------
 
 2007-07-18  Lynn Garren
